disconnect all client signals when it's closed

the client can still live on and emit stuff, but the
compositing has been fininshed for it, so the effect window is NULL

BUG: 310142
FIXED-IN: 4.10
REVIEW: 108008